// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Dive Site Manager Searching dive sites Will allow pagination 1`] = `
[
  {
    "averageDifficulty": 3.06,
    "averageRating": 2.47,
    "createdOn": 2019-12-04T01:33:40.915Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/797.jpg",
      "displayName": "Mattie Franey",
      "id": "c0f40730-124d-4f04-a33e-e37b2d43b0c0",
      "memberSince": 2017-12-31T07:52:18.100Z,
      "username": "Nicolette_Gleason",
    },
    "depth": {
      "depth": 25.8,
      "unit": "ft",
    },
    "description": "Delectus debitis beatae possimus. Ut nam quia a aut distinctio minima ex sapiente.",
    "directions": "Necessitatibus quae sed illo aut excepturi architecto.",
    "freeToDive": false,
    "gps": {
      "lat": -64.06,
      "lon": -11.8,
    },
    "id": "40296316-d15c-4df5-9a75-2c3603809967",
    "location": "Binghamton Egypt",
    "name": "shy gaiters",
    "shoreAccess": true,
    "updatedOn": 2022-04-26T19:04:34.933Z,
  },
  {
    "averageDifficulty": 1.74,
    "averageRating": 4.42,
    "createdOn": 2019-06-30T09:27:17.577Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/3.jpg",
      "displayName": "Jerome Wunsch",
      "id": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "memberSince": 2023-01-15T03:59:59.677Z,
      "username": "Elijah44",
    },
    "depth": {
      "depth": 128.3,
      "unit": "ft",
    },
    "description": "Voluptatem odio odit asperiores neque architecto ut debitis ipsam in. Corporis eum unde sequi.",
    "directions": "Dolores cum blanditiis sunt corporis tempora similique.",
    "freeToDive": false,
    "gps": {
      "lat": -77.73,
      "lon": 18.83,
    },
    "id": "30b7328f-ccb3-4f0f-b064-54e54be748f2",
    "location": "New Britain Turkmenistan",
    "name": "kooky jam",
    "shoreAccess": false,
    "updatedOn": 2021-01-13T01:59:00.137Z,
  },
  {
    "averageDifficulty": 2.89,
    "averageRating": 2.5,
    "createdOn": 2023-01-03T07:52:08.094Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/64.jpg",
      "displayName": "Vincent Doyle",
      "id": "5c945b43-dcea-4e47-b66b-23e17536968c",
      "memberSince": 2019-01-04T21:57:53.487Z,
      "username": "Lucious.Pagac",
    },
    "depth": {
      "depth": 24.77,
      "unit": "m",
    },
    "description": "In repudiandae itaque numquam assumenda ex. Veniam ipsa voluptates exercitationem quaerat ex quia numquam non et.",
    "directions": "Aut ipsum provident itaque.",
    "freeToDive": false,
    "gps": {
      "lat": 61.22,
      "lon": -40.01,
    },
    "id": "71923f7d-cab1-4f88-9564-23f91042f450",
    "location": "San Marcos Myanmar",
    "name": "average lesbian",
    "shoreAccess": false,
    "updatedOn": 2021-06-01T09:55:22.259Z,
  },
  {
    "averageDifficulty": 4.7,
    "averageRating": 4.9,
    "createdOn": 2023-04-15T03:07:28.621Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/488.jpg",
      "displayName": "Dr. Whitney Marvin",
      "id": "d078d455-79a1-4b15-aef3-7db1809c010c",
      "memberSince": 2023-01-28T16:05:43.410Z,
      "username": "Justus_Turcotte55",
    },
    "depth": {
      "depth": 90.5,
      "unit": "ft",
    },
    "description": "Accusamus facilis fugiat eaque rerum maxime. Deserunt aliquid sint et dolor dignissimos perspiciatis nobis accusamus officia.",
    "directions": "Ducimus culpa earum quisquam asperiores tempora.",
    "freeToDive": true,
    "gps": {
      "lat": -55.36,
      "lon": -74.86,
    },
    "id": "78c7fd6a-6c04-432b-ab49-2104ef55d2c4",
    "location": "Sunnyvale Netherlands Antilles",
    "name": "kindhearted thought",
    "shoreAccess": false,
    "updatedOn": 2023-07-08T10:08:17.010Z,
  },
  {
    "averageDifficulty": 3.4,
    "averageRating": 2.76,
    "createdOn": 2023-02-16T02:50:53.496Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/968.jpg",
      "displayName": "Maxine Conn DDS",
      "id": "79fea7a7-2448-4e0a-b119-47c994e00266",
      "memberSince": 2019-10-17T12:14:41.089Z,
      "username": "Carolina_OConner93",
    },
    "depth": {
      "depth": 9.2,
      "unit": "ft",
    },
    "description": "Molestiae soluta voluptate quidem id sunt officiis. Praesentium corporis fugit cupiditate nulla quasi nesciunt.",
    "directions": "Asperiores possimus quod eius.",
    "freeToDive": false,
    "gps": {
      "lat": -16.05,
      "lon": -56.73,
    },
    "id": "5cb11160-c18a-4d6b-8467-ecb3b4035594",
    "location": "West Haven Iran",
    "name": "unwieldy optimal",
    "shoreAccess": true,
    "updatedOn": 2022-12-23T05:38:14.049Z,
  },
  {
    "averageDifficulty": 4.04,
    "averageRating": 1.61,
    "createdOn": 2018-07-14T18:11:06.192Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/743.jpg",
      "displayName": "Stewart Roberts",
      "id": "ed70c751-e659-4649-8983-2287e4199cda",
      "memberSince": 2018-10-27T16:03:42.342Z,
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 72,
      "unit": "ft",
    },
    "description": "Eaque reprehenderit dolores placeat nesciunt officiis. Voluptatibus modi mollitia eligendi.",
    "directions": "Consequatur tenetur est minima velit id velit.",
    "freeToDive": false,
    "gps": {
      "lat": 87.77,
      "lon": -115.15,
    },
    "id": "d7b71b04-7d9c-404e-8e39-8f9aede5a6bb",
    "location": "Castle Rock New Caledonia",
    "name": "competent wildebeest",
    "shoreAccess": true,
    "updatedOn": 2022-08-28T19:33:11.044Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will filter based on difficulty range 1`] = `
[
  {
    "averageDifficulty": 1.52,
    "averageRating": 3.67,
    "createdOn": 2021-10-03T22:09:38.517Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1207.jpg",
      "displayName": "Marcus Jacobi",
      "id": "5d648c18-1836-4294-8384-fff82b3f57fa",
      "memberSince": 2017-10-09T08:41:48.547Z,
      "username": "Mina65",
    },
    "depth": {
      "depth": 14,
      "unit": "m",
    },
    "description": "Veniam aspernatur aut cupiditate. Voluptatum laboriosam laudantium atque numquam.",
    "directions": "Vero placeat tempore voluptate.",
    "freeToDive": false,
    "gps": {
      "lat": 10.1,
      "lon": -84.56,
    },
    "id": "424efb04-7356-4b44-b265-8a432753f573",
    "location": "Waterbury Saint Kitts and Nevis",
    "name": "willing checkout",
    "shoreAccess": false,
    "updatedOn": 2023-03-11T05:11:00.705Z,
  },
  {
    "averageDifficulty": 1.53,
    "averageRating": 4.24,
    "createdOn": 2019-02-19T02:08:41.305Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1142.jpg",
      "displayName": "Marilyn Miller Sr.",
      "id": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "memberSince": 2019-04-26T02:22:55.498Z,
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 94,
      "unit": "ft",
    },
    "description": "Dolorum iure pariatur animi sint. Cumque aspernatur deleniti voluptates in sunt.",
    "directions": "Facilis inventore cumque architecto repudiandae eaque enim.",
    "freeToDive": true,
    "gps": {
      "lat": 83.59,
      "lon": 20.41,
    },
    "id": "0a5e89fc-2f55-43c5-ae15-6db394788256",
    "location": "Dubuque Thailand",
    "name": "idealistic acquisition",
    "shoreAccess": false,
    "updatedOn": 2021-07-27T11:21:52.183Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.91,
    "createdOn": 2020-08-24T23:45:29.318Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/919.jpg",
      "displayName": "Louis Kozey",
      "id": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "memberSince": 2021-07-03T20:52:36.948Z,
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 35.84,
      "unit": "m",
    },
    "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
    "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": 21.8,
      "lon": -7.65,
    },
    "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
    "location": "Rialto Marshall Islands",
    "name": "rundown handful",
    "shoreAccess": false,
    "updatedOn": 2021-06-13T03:32:10.180Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.68,
    "createdOn": 2022-10-30T01:31:28.825Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/796.jpg",
      "displayName": "Whitney Ullrich",
      "id": "47064f42-07c1-4da4-bd31-37ca70a353e7",
      "memberSince": 2019-05-24T20:21:05.865Z,
      "username": "Orie.Fahey",
    },
    "depth": {
      "depth": 32.97,
      "unit": "m",
    },
    "description": "Iure error enim asperiores nobis molestiae corporis aliquid veniam dolorem. Harum voluptatibus aspernatur nobis.",
    "directions": "Cupiditate minus perferendis soluta natus at dolores veniam optio.",
    "freeToDive": false,
    "gps": {
      "lat": 4.14,
      "lon": 17.35,
    },
    "id": "f3bb0ef1-bb76-468f-84c5-a4dce96dfa8a",
    "location": "Reston Morocco",
    "name": "worthless decision",
    "shoreAccess": true,
    "updatedOn": 2022-10-31T14:50:01.908Z,
  },
  {
    "averageDifficulty": 1.57,
    "averageRating": 4.22,
    "createdOn": 2022-06-20T05:34:30.708Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/891.jpg",
      "displayName": "Mr. Roy Beer III",
      "id": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "memberSince": 2022-09-07T06:00:44.772Z,
      "username": "Leslie65",
    },
    "depth": {
      "depth": 9.4,
      "unit": "ft",
    },
    "description": "Doloribus corrupti hic reiciendis odit. Omnis vitae aliquid laborum nostrum dicta.",
    "directions": "Labore ad vitae nulla exercitationem doloribus.",
    "freeToDive": false,
    "gps": {
      "lat": -16.63,
      "lon": -96.87,
    },
    "id": "58e335e5-6a16-4052-b272-3f46e20ba5e5",
    "location": "Bethesda Congo",
    "name": "slow prompt",
    "shoreAccess": true,
    "updatedOn": 2022-07-10T10:44:56.483Z,
  },
  {
    "averageDifficulty": 1.63,
    "averageRating": 4.3,
    "createdOn": 2019-10-04T12:48:38.948Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1207.jpg",
      "displayName": "Marcus Jacobi",
      "id": "5d648c18-1836-4294-8384-fff82b3f57fa",
      "memberSince": 2017-10-09T08:41:48.547Z,
      "username": "Mina65",
    },
    "depth": {
      "depth": 24.85,
      "unit": "m",
    },
    "description": "Sequi modi dolores facilis magni. Magnam perspiciatis dignissimos porro magnam libero aspernatur dicta illo inventore.",
    "directions": "In soluta aspernatur nostrum accusantium eaque fugit.",
    "freeToDive": true,
    "gps": {
      "lat": 20.69,
      "lon": 159.31,
    },
    "id": "796fade5-06eb-43ba-9edb-131a8fb1e24a",
    "location": "Laguna Niguel Congo",
    "name": "outrageous greens",
    "shoreAccess": true,
    "updatedOn": 2021-05-24T09:39:51.061Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will filter based on rating range 1`] = `
[
  {
    "averageDifficulty": 4.7,
    "averageRating": 4.9,
    "createdOn": 2023-04-15T03:07:28.621Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/488.jpg",
      "displayName": "Dr. Whitney Marvin",
      "id": "d078d455-79a1-4b15-aef3-7db1809c010c",
      "memberSince": 2023-01-28T16:05:43.410Z,
      "username": "Justus_Turcotte55",
    },
    "depth": {
      "depth": 90.5,
      "unit": "ft",
    },
    "description": "Accusamus facilis fugiat eaque rerum maxime. Deserunt aliquid sint et dolor dignissimos perspiciatis nobis accusamus officia.",
    "directions": "Ducimus culpa earum quisquam asperiores tempora.",
    "freeToDive": true,
    "gps": {
      "lat": -55.36,
      "lon": -74.86,
    },
    "id": "78c7fd6a-6c04-432b-ab49-2104ef55d2c4",
    "location": "Sunnyvale Netherlands Antilles",
    "name": "kindhearted thought",
    "shoreAccess": false,
    "updatedOn": 2023-07-08T10:08:17.010Z,
  },
  {
    "averageDifficulty": 1.75,
    "averageRating": 4.9,
    "createdOn": 2019-09-23T18:38:25.929Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/778.jpg",
      "displayName": "Harold Paucek",
      "id": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "memberSince": 2023-05-22T22:37:37.769Z,
      "username": "Aglae31",
    },
    "depth": {
      "depth": 19.9,
      "unit": "m",
    },
    "description": "Suscipit eligendi provident minus saepe ipsum quod veniam placeat. Iure autem iure aliquid.",
    "directions": "Iste quo beatae suscipit deserunt eos.",
    "freeToDive": false,
    "gps": {
      "lat": -34.09,
      "lon": 115.05,
    },
    "id": "4a94192d-e3bb-4f5e-8ca0-7b8b01bca845",
    "location": "Canton Cote d'Ivoire",
    "name": "regal antechamber",
    "shoreAccess": false,
    "updatedOn": 2022-06-25T14:30:37.689Z,
  },
  {
    "averageDifficulty": 2.07,
    "averageRating": 4.88,
    "createdOn": 2020-03-31T01:03:30.190Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/7.jpg",
      "displayName": "Marian White",
      "id": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "memberSince": 2018-05-21T04:31:43.020Z,
      "username": "Tillman30",
    },
    "depth": {
      "depth": 6.09,
      "unit": "m",
    },
    "description": "Totam voluptatum magnam voluptas. Commodi maxime aperiam deserunt.",
    "directions": "Harum nihil reiciendis corrupti nam vel neque.",
    "freeToDive": true,
    "gps": {
      "lat": -81.39,
      "lon": 132.33,
    },
    "id": "ccb01e30-256b-4253-80c7-4445b7424ba5",
    "location": "Centennial Guadeloupe",
    "name": "worst treasure",
    "shoreAccess": false,
    "updatedOn": 2022-01-25T05:26:50.265Z,
  },
  {
    "averageDifficulty": 5,
    "averageRating": 4.84,
    "createdOn": 2021-10-14T09:24:04.436Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/891.jpg",
      "displayName": "Mr. Roy Beer III",
      "id": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "memberSince": 2022-09-07T06:00:44.772Z,
      "username": "Leslie65",
    },
    "depth": {
      "depth": 83.4,
      "unit": "ft",
    },
    "description": "Quisquam blanditiis voluptatum necessitatibus dolor dolore dolore alias incidunt. Praesentium dolorum cupiditate perferendis libero.",
    "directions": "Alias molestias officiis voluptatum error sed libero iusto optio suscipit.",
    "freeToDive": true,
    "gps": {
      "lat": -6.36,
      "lon": -96.69,
    },
    "id": "28f66713-9a95-46eb-9112-e8db952972d4",
    "location": "New Brunswick French Guiana",
    "name": "disloyal apology",
    "shoreAccess": true,
    "updatedOn": 2023-05-01T19:11:08.933Z,
  },
  {
    "averageDifficulty": 2,
    "averageRating": 4.84,
    "createdOn": 2018-09-28T19:27:47.940Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1069.jpg",
      "displayName": "Tonya Reichel Sr.",
      "id": "c24724ee-bccb-46a6-bb55-035d4c5d97fa",
      "memberSince": 2018-04-11T07:18:30.090Z,
      "username": "Garret.Nicolas20",
    },
    "depth": {
      "depth": 48.2,
      "unit": "ft",
    },
    "description": "Rem ad vero doloribus exercitationem nulla provident ducimus alias. Ipsam fuga ipsam quasi enim aspernatur.",
    "directions": "Unde enim alias nam aspernatur perferendis omnis placeat nobis placeat.",
    "freeToDive": false,
    "gps": {
      "lat": 85.12,
      "lon": 147.47,
    },
    "id": "95341a27-a210-4423-bc39-40736b2df4c8",
    "location": "Bayamon French Southern Territories",
    "name": "crafty den",
    "shoreAccess": false,
    "updatedOn": 2023-01-21T00:22:37.805Z,
  },
  {
    "averageDifficulty": 2.95,
    "averageRating": 4.82,
    "createdOn": 2021-10-18T02:26:32.397Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/3.jpg",
      "displayName": "Jerome Wunsch",
      "id": "0fae3dce-e15c-43aa-ba82-e8b5742d2cbb",
      "memberSince": 2023-01-15T03:59:59.677Z,
      "username": "Elijah44",
    },
    "depth": {
      "depth": 80.5,
      "unit": "ft",
    },
    "description": "Impedit ipsam veniam amet iste delectus. Incidunt aliquam iure fugiat hic cumque aliquid perspiciatis.",
    "directions": "Architecto laudantium illum debitis praesentium fugiat magni corporis suscipit nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": 64.88,
      "lon": 100.5,
    },
    "id": "2ea163d2-e9cd-4538-95a2-c4f3c90f7db9",
    "location": "Shawnee Guinea",
    "name": "glum lizard",
    "shoreAccess": false,
    "updatedOn": 2020-10-16T09:03:58.147Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will filter by location with radius: 10 1`] = `[]`;

exports[`Default Dive Site Manager Searching dive sites Will filter by location with radius: 50 1`] = `[]`;

exports[`Default Dive Site Manager Searching dive sites Will filter by location with radius: 500 1`] = `[]`;

exports[`Default Dive Site Manager Searching dive sites Will filter by location with radius: undefined 1`] = `[]`;

exports[`Default Dive Site Manager Searching dive sites Will search based on a query string 1`] = `
[
  {
    "averageDifficulty": 1.87,
    "averageRating": 2.53,
    "createdOn": 2022-01-30T13:11:57.059Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/796.jpg",
      "displayName": "Whitney Ullrich",
      "id": "47064f42-07c1-4da4-bd31-37ca70a353e7",
      "memberSince": 2019-05-24T20:21:05.865Z,
      "username": "Orie.Fahey",
    },
    "depth": {
      "depth": 39.5,
      "unit": "ft",
    },
    "description": "Vero iure quas suscipit similique qui mollitia. Temporibus culpa nemo corrupti natus cupiditate et assumenda temporibus.",
    "directions": "Quis iusto temporibus.",
    "freeToDive": false,
    "gps": {
      "lat": 51.32,
      "lon": -133.77,
    },
    "id": "4510efc6-24ae-4744-8a80-35bbe80a237f",
    "location": "South Bend Latvia",
    "name": "celebrated paint",
    "shoreAccess": false,
    "updatedOn": 2022-05-24T15:52:51.442Z,
  },
  {
    "averageDifficulty": 4.46,
    "averageRating": 2.28,
    "createdOn": 2019-12-27T20:09:15.357Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/968.jpg",
      "displayName": "Maxine Conn DDS",
      "id": "79fea7a7-2448-4e0a-b119-47c994e00266",
      "memberSince": 2019-10-17T12:14:41.089Z,
      "username": "Carolina_OConner93",
    },
    "depth": {
      "depth": 6.39,
      "unit": "m",
    },
    "description": "At dolore iusto quas reiciendis enim deleniti laborum sit. Minima dolor pariatur animi voluptates illum pariatur possimus doloribus.",
    "directions": "Rerum fugit dicta amet nisi nihil nemo.",
    "freeToDive": false,
    "gps": {
      "lat": -19.07,
      "lon": 31.72,
    },
    "id": "4afbe220-6350-4337-bae8-6a9e5920f4c4",
    "location": "High Point Cameroon",
    "name": "quiet talk",
    "shoreAccess": true,
    "updatedOn": 2022-09-01T01:07:42.682Z,
  },
  {
    "averageDifficulty": 3.65,
    "averageRating": 2.29,
    "createdOn": 2022-04-18T09:20:43.666Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/335.jpg",
      "displayName": "Luz Kessler",
      "id": "3c930653-0c3d-49d5-ab62-45c4a6832d6b",
      "memberSince": 2018-05-09T08:21:54.925Z,
      "username": "Ryan68",
    },
    "depth": {
      "depth": 45.4,
      "unit": "ft",
    },
    "description": "Tenetur quasi debitis pariatur velit vel. Veritatis ipsum quisquam.",
    "directions": "Laudantium ullam accusantium tenetur cupiditate porro at.",
    "freeToDive": false,
    "gps": {
      "lat": 46.23,
      "lon": 38.35,
    },
    "id": "6ea14302-0880-4fe8-97ef-cda3a530215a",
    "location": "Redondo Beach Myanmar",
    "name": "unique stamp",
    "shoreAccess": true,
    "updatedOn": 2023-02-23T17:17:46.060Z,
  },
  {
    "averageDifficulty": 1.53,
    "averageRating": 4.24,
    "createdOn": 2019-02-19T02:08:41.305Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1142.jpg",
      "displayName": "Marilyn Miller Sr.",
      "id": "fb717328-5bbc-4dab-b516-dc0ec8ab8022",
      "memberSince": 2019-04-26T02:22:55.498Z,
      "username": "Michale_Toy74",
    },
    "depth": {
      "depth": 94,
      "unit": "ft",
    },
    "description": "Dolorum iure pariatur animi sint. Cumque aspernatur deleniti voluptates in sunt.",
    "directions": "Facilis inventore cumque architecto repudiandae eaque enim.",
    "freeToDive": true,
    "gps": {
      "lat": 83.59,
      "lon": 20.41,
    },
    "id": "0a5e89fc-2f55-43c5-ae15-6db394788256",
    "location": "Dubuque Thailand",
    "name": "idealistic acquisition",
    "shoreAccess": false,
    "updatedOn": 2021-07-27T11:21:52.183Z,
  },
  {
    "averageDifficulty": 2.86,
    "averageRating": 4.57,
    "createdOn": 2022-02-24T03:51:26.307Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/968.jpg",
      "displayName": "Maxine Conn DDS",
      "id": "79fea7a7-2448-4e0a-b119-47c994e00266",
      "memberSince": 2019-10-17T12:14:41.089Z,
      "username": "Carolina_OConner93",
    },
    "depth": {
      "depth": 6.34,
      "unit": "m",
    },
    "description": "Dolorum nostrum consequuntur error pariatur dolor. Temporibus ratione unde dolores.",
    "directions": "Repellendus ducimus quaerat iure molestiae.",
    "freeToDive": true,
    "gps": {
      "lat": -49.74,
      "lon": -133.79,
    },
    "id": "08ca4fbe-9514-42a1-b48e-d841eb19537d",
    "location": "Folsom Togo",
    "name": "clever app",
    "shoreAccess": false,
    "updatedOn": 2021-12-15T14:29:57.841Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by name in asc order 1`] = `
[
  {
    "averageDifficulty": 2.69,
    "averageRating": 3.31,
    "createdOn": 2020-07-10T02:41:28.372Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/919.jpg",
      "displayName": "Louis Kozey",
      "id": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "memberSince": 2021-07-03T20:52:36.948Z,
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 37.3,
      "unit": "m",
    },
    "description": "Enim ratione quam quasi occaecati. Iure soluta in consequatur voluptas ab molestiae ea blanditiis aperiam.",
    "directions": "Dolores nam officia reiciendis iusto voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -34.84,
      "lon": 38.79,
    },
    "id": "3806eda9-5b04-48bd-9743-ea9f9e49a703",
    "location": "Youngstown Guatemala",
    "name": "academic sanction",
    "shoreAccess": true,
    "updatedOn": 2023-03-30T10:26:42.676Z,
  },
  {
    "averageDifficulty": 3.72,
    "averageRating": 3.46,
    "createdOn": 2019-09-18T13:28:58.184Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/778.jpg",
      "displayName": "Harold Paucek",
      "id": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "memberSince": 2023-05-22T22:37:37.769Z,
      "username": "Aglae31",
    },
    "depth": {
      "depth": 73.2,
      "unit": "ft",
    },
    "description": "In aut vitae dolorum architecto perferendis. Cum harum excepturi.",
    "directions": "Perspiciatis maiores ad.",
    "freeToDive": false,
    "gps": {
      "lat": 85.04,
      "lon": 13.56,
    },
    "id": "b432465b-b102-45d2-88ab-9a7d7f57f82d",
    "location": "Rowlett Papua New Guinea",
    "name": "acclaimed windage",
    "shoreAccess": false,
    "updatedOn": 2020-12-16T11:12:54.892Z,
  },
  {
    "averageDifficulty": 3.57,
    "averageRating": 3.6,
    "createdOn": 2021-03-30T12:36:36.556Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/743.jpg",
      "displayName": "Stewart Roberts",
      "id": "ed70c751-e659-4649-8983-2287e4199cda",
      "memberSince": 2018-10-27T16:03:42.342Z,
      "username": "Eryn_Bogan58",
    },
    "depth": {
      "depth": 37.56,
      "unit": "m",
    },
    "description": "Praesentium dolor inventore autem ab deleniti delectus commodi quas. Molestias perspiciatis dolore.",
    "directions": "Voluptas fugiat aut aut aliquam impedit molestiae aliquid.",
    "freeToDive": true,
    "gps": {
      "lat": 37.97,
      "lon": 125.23,
    },
    "id": "76a820c4-c8f2-4d81-afcf-235712fde93e",
    "location": "Rosemead Cuba",
    "name": "accomplished icecream",
    "shoreAccess": false,
    "updatedOn": 2021-07-17T18:12:29.122Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 2.1,
    "createdOn": 2019-03-12T18:01:54.794Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/565.jpg",
      "displayName": "Laurence Kuhn",
      "id": "928449ec-03af-438b-84d7-d82922a2f549",
      "memberSince": 2023-04-14T06:46:18.378Z,
      "username": "Jarod29",
    },
    "depth": {
      "depth": 128.7,
      "unit": "ft",
    },
    "description": "Atque quod ex corrupti voluptate porro officia adipisci dolore quia. Ullam maiores soluta corporis ex.",
    "directions": "Accusamus molestiae quaerat.",
    "freeToDive": true,
    "gps": {
      "lat": -36.36,
      "lon": 7.89,
    },
    "id": "d0496f41-ebc5-4798-8e10-7ad46d0a1b3e",
    "location": "Haverhill United Kingdom",
    "name": "adventurous honeydew",
    "shoreAccess": true,
    "updatedOn": 2021-03-22T17:42:05.678Z,
  },
  {
    "averageDifficulty": 4.73,
    "averageRating": 3.41,
    "createdOn": 2018-07-10T09:01:53.557Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/891.jpg",
      "displayName": "Mr. Roy Beer III",
      "id": "7411c057-23b5-4fc4-8585-042ae69b7f3a",
      "memberSince": 2022-09-07T06:00:44.772Z,
      "username": "Leslie65",
    },
    "depth": {
      "depth": 32,
      "unit": "ft",
    },
    "description": "Delectus doloribus a rerum. At facilis tempore laudantium id consectetur.",
    "directions": "Optio tenetur illum.",
    "freeToDive": true,
    "gps": {
      "lat": 23.33,
      "lon": -30.3,
    },
    "id": "c667a962-aad5-4f34-a82a-60c1f6d25063",
    "location": "Hattiesburg Liechtenstein",
    "name": "alarming catastrophe",
    "shoreAccess": false,
    "updatedOn": 2020-08-22T08:15:41.714Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by name in desc order 1`] = `
[
  {
    "averageDifficulty": 4.85,
    "averageRating": 1.98,
    "createdOn": 2022-01-18T23:02:52.646Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/489.jpg",
      "displayName": "Muriel Hettinger DVM",
      "id": "baeb11c8-e3ad-4af2-b664-85fe67a290d4",
      "memberSince": 2018-05-10T12:02:56.902Z,
      "username": "Camilla62",
    },
    "depth": {
      "depth": 8,
      "unit": "m",
    },
    "description": "Optio quae aliquid facere nesciunt sapiente aperiam placeat. Quibusdam consequatur aliquid.",
    "directions": "Sit dicta omnis.",
    "freeToDive": false,
    "gps": {
      "lat": 6.28,
      "lon": -6,
    },
    "id": "10c1c0a1-6f8e-44f3-862f-656b198e2b36",
    "location": "Harrisburg Grenada",
    "name": "writhing sandwich",
    "shoreAccess": false,
    "updatedOn": 2023-06-27T02:19:30.904Z,
  },
  {
    "averageDifficulty": 3.69,
    "averageRating": 2.75,
    "createdOn": 2021-02-18T22:47:47.542Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/797.jpg",
      "displayName": "Mattie Franey",
      "id": "c0f40730-124d-4f04-a33e-e37b2d43b0c0",
      "memberSince": 2017-12-31T07:52:18.100Z,
      "username": "Nicolette_Gleason",
    },
    "depth": {
      "depth": 78.7,
      "unit": "ft",
    },
    "description": "Tempora iusto adipisci numquam minima deleniti amet accusamus libero tenetur. Dolore fugit provident illum impedit asperiores fugiat.",
    "directions": "Voluptatem ipsam vel consequuntur eum quos id hic nesciunt.",
    "freeToDive": true,
    "gps": {
      "lat": 55.65,
      "lon": 157.13,
    },
    "id": "5f606536-da76-41fe-a74b-a4981144e12f",
    "location": "St. Joseph Hungary",
    "name": "wrathful container",
    "shoreAccess": true,
    "updatedOn": 2021-02-20T01:40:39.044Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.68,
    "createdOn": 2022-10-30T01:31:28.825Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/796.jpg",
      "displayName": "Whitney Ullrich",
      "id": "47064f42-07c1-4da4-bd31-37ca70a353e7",
      "memberSince": 2019-05-24T20:21:05.865Z,
      "username": "Orie.Fahey",
    },
    "depth": {
      "depth": 32.97,
      "unit": "m",
    },
    "description": "Iure error enim asperiores nobis molestiae corporis aliquid veniam dolorem. Harum voluptatibus aspernatur nobis.",
    "directions": "Cupiditate minus perferendis soluta natus at dolores veniam optio.",
    "freeToDive": false,
    "gps": {
      "lat": 4.14,
      "lon": 17.35,
    },
    "id": "f3bb0ef1-bb76-468f-84c5-a4dce96dfa8a",
    "location": "Reston Morocco",
    "name": "worthless decision",
    "shoreAccess": true,
    "updatedOn": 2022-10-31T14:50:01.908Z,
  },
  {
    "averageDifficulty": 2.07,
    "averageRating": 4.88,
    "createdOn": 2020-03-31T01:03:30.190Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/7.jpg",
      "displayName": "Marian White",
      "id": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "memberSince": 2018-05-21T04:31:43.020Z,
      "username": "Tillman30",
    },
    "depth": {
      "depth": 6.09,
      "unit": "m",
    },
    "description": "Totam voluptatum magnam voluptas. Commodi maxime aperiam deserunt.",
    "directions": "Harum nihil reiciendis corrupti nam vel neque.",
    "freeToDive": true,
    "gps": {
      "lat": -81.39,
      "lon": 132.33,
    },
    "id": "ccb01e30-256b-4253-80c7-4445b7424ba5",
    "location": "Centennial Guadeloupe",
    "name": "worst treasure",
    "shoreAccess": false,
    "updatedOn": 2022-01-25T05:26:50.265Z,
  },
  {
    "averageDifficulty": 2.2,
    "averageRating": 4.82,
    "createdOn": 2021-04-11T12:40:42.016Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/778.jpg",
      "displayName": "Harold Paucek",
      "id": "d00fb87b-ad27-4666-91df-b3988ba763a6",
      "memberSince": 2023-05-22T22:37:37.769Z,
      "username": "Aglae31",
    },
    "depth": {
      "depth": 126.9,
      "unit": "ft",
    },
    "description": "Facere ratione suscipit reprehenderit veritatis laborum blanditiis corporis. Rem nostrum eius impedit repudiandae.",
    "directions": "Et reiciendis provident modi ut ut eaque quo.",
    "freeToDive": false,
    "gps": {
      "lat": 49.25,
      "lon": -136.76,
    },
    "id": "acc48388-1413-4610-a3a0-d36b76759ac2",
    "location": "Sterling Heights Bhutan",
    "name": "worrisome cinnamon",
    "shoreAccess": true,
    "updatedOn": 2021-03-11T21:10:37.784Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by rating in asc order 1`] = `
[
  {
    "averageDifficulty": 2.43,
    "averageRating": 1.01,
    "createdOn": 2019-06-06T11:46:01.038Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/18.jpg",
      "displayName": "Desiree Padberg",
      "id": "a4f41661-a1c4-46cd-9c34-30c952ed9d32",
      "memberSince": 2019-10-05T05:53:03.760Z,
      "username": "Lionel_Hickle",
    },
    "depth": {
      "depth": 3.17,
      "unit": "m",
    },
    "description": "Dolorum velit consequatur et qui blanditiis ex fuga nam. Accusamus assumenda consequuntur accusantium maxime.",
    "directions": "At odio sint blanditiis assumenda.",
    "freeToDive": false,
    "gps": {
      "lat": -2.74,
      "lon": -24.88,
    },
    "id": "d9306937-4009-4a67-aded-bb734cb71235",
    "location": "Indio Japan",
    "name": "untidy authentication",
    "shoreAccess": false,
    "updatedOn": 2022-07-20T16:33:14.348Z,
  },
  {
    "averageDifficulty": 2.02,
    "averageRating": 1.05,
    "createdOn": 2019-06-27T20:52:19.877Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1146.jpg",
      "displayName": "Jan Gusikowski",
      "id": "aba67b0e-2063-40c8-8713-86eee84210c8",
      "memberSince": 2019-05-17T06:54:43.455Z,
      "username": "Jazlyn_Jakubowski13",
    },
    "depth": {
      "depth": 6.92,
      "unit": "m",
    },
    "description": "Fuga nesciunt quasi veniam repudiandae enim cupiditate nesciunt. Labore culpa officiis est natus vitae blanditiis.",
    "directions": "Facere quidem neque voluptatibus.",
    "freeToDive": true,
    "gps": {
      "lat": -14.83,
      "lon": 45.05,
    },
    "id": "bef543fc-4caf-4502-928f-e66897f5b843",
    "location": "Bethlehem Lao People's Democratic Republic",
    "name": "humiliating surname",
    "shoreAccess": false,
    "updatedOn": 2020-12-09T00:05:02.743Z,
  },
  {
    "averageDifficulty": 4.8,
    "averageRating": 1.09,
    "createdOn": 2019-03-23T07:49:17.434Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/530.jpg",
      "displayName": "Cory Braun",
      "id": "2d152a10-1314-4494-8fa5-72d091bdb270",
      "memberSince": 2021-04-03T11:58:56.408Z,
      "username": "Sigmund_Muller",
    },
    "depth": {
      "depth": 81.5,
      "unit": "ft",
    },
    "description": "Eius consequatur repudiandae dolores exercitationem corporis ea velit. Eius iure voluptates tempore a.",
    "directions": "Excepturi quam a animi.",
    "freeToDive": true,
    "gps": {
      "lat": -61.15,
      "lon": -11.85,
    },
    "id": "0ea01835-3eb8-4f05-8f43-a7fbf91fe070",
    "location": "Akron Congo",
    "name": "concrete dancer",
    "shoreAccess": false,
    "updatedOn": 2023-03-21T22:21:41.436Z,
  },
  {
    "averageDifficulty": 1.25,
    "averageRating": 1.1,
    "createdOn": 2019-07-16T04:58:23.366Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1234.jpg",
      "displayName": "Doreen Murray",
      "id": "4d014c0a-9b5c-4080-be63-eade8a9260da",
      "memberSince": 2017-09-22T05:17:43.857Z,
      "username": "Jeanne.Wiegand11",
    },
    "depth": {
      "depth": 12.92,
      "unit": "m",
    },
    "description": "Ipsum pariatur modi sed dignissimos ut tenetur necessitatibus. Soluta tenetur asperiores maxime vel maiores vitae voluptas ab soluta.",
    "directions": "Corrupti laboriosam at illo eaque placeat explicabo.",
    "freeToDive": false,
    "gps": {
      "lat": 29.27,
      "lon": -106.34,
    },
    "id": "deaa1c8e-f067-4ada-9229-6d5fa378abd6",
    "location": "Victorville China",
    "name": "weepy brother-in-law",
    "shoreAccess": true,
    "updatedOn": 2022-02-19T08:25:23.340Z,
  },
  {
    "averageDifficulty": 1.12,
    "averageRating": 1.14,
    "createdOn": 2019-10-03T07:33:28.059Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/954.jpg",
      "displayName": "Joey Kulas III",
      "id": "9487653a-40e7-446f-b45d-3fbf3bf97644",
      "memberSince": 2017-09-20T17:24:23.460Z,
      "username": "Preston40",
    },
    "depth": {
      "depth": 75.4,
      "unit": "ft",
    },
    "description": "Suscipit assumenda tempora possimus pariatur voluptas. Impedit aliquam nam temporibus omnis eius.",
    "directions": "Nihil laborum quae neque repudiandae.",
    "freeToDive": true,
    "gps": {
      "lat": -33.63,
      "lon": -105.4,
    },
    "id": "abef4dc8-1254-45e7-ae95-8d2978564f3d",
    "location": "Dothan Bolivia",
    "name": "failing blight",
    "shoreAccess": false,
    "updatedOn": 2023-04-28T01:48:51.271Z,
  },
]
`;

exports[`Default Dive Site Manager Searching dive sites Will sort results by rating in desc order 1`] = `
[
  {
    "averageDifficulty": 3.88,
    "averageRating": 4.96,
    "createdOn": 2021-06-13T14:23:35.687Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/802.jpg",
      "displayName": "Archie Willms",
      "id": "11f3f8dd-5bbd-4344-8173-3a388484c4d3",
      "memberSince": 2021-11-02T20:39:02.263Z,
      "username": "Pietro.Tillman",
    },
    "depth": {
      "depth": 114.4,
      "unit": "ft",
    },
    "description": "Iure consequatur illum molestiae. Alias magni deserunt saepe facilis numquam reprehenderit corporis atque ipsam.",
    "directions": "Veritatis nesciunt possimus laborum quisquam officiis nostrum asperiores reiciendis.",
    "freeToDive": true,
    "gps": {
      "lat": -21.98,
      "lon": -110.74,
    },
    "id": "d9a2ee0d-1fde-411a-8808-faefdc4cb29d",
    "location": "Athens-Clarke County Liechtenstein",
    "name": "impure gavel",
    "shoreAccess": false,
    "updatedOn": 2020-11-26T14:50:50.727Z,
  },
  {
    "averageDifficulty": 3.8,
    "averageRating": 4.95,
    "createdOn": 2022-12-30T06:36:35.521Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/919.jpg",
      "displayName": "Louis Kozey",
      "id": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "memberSince": 2021-07-03T20:52:36.948Z,
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 11.31,
      "unit": "m",
    },
    "description": "Quia accusantium asperiores. Blanditiis deserunt voluptates temporibus.",
    "directions": "Voluptas doloremque asperiores iure architecto voluptate fugit commodi.",
    "freeToDive": false,
    "gps": {
      "lat": 12.6,
      "lon": -55.31,
    },
    "id": "3d49a4f1-8918-4b89-96dc-81db0ea99ed5",
    "location": "Anaheim Guadeloupe",
    "name": "concrete thing",
    "shoreAccess": true,
    "updatedOn": 2021-12-19T06:06:01.543Z,
  },
  {
    "averageDifficulty": 4.4,
    "averageRating": 4.93,
    "createdOn": 2017-11-10T20:27:25.268Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/7.jpg",
      "displayName": "Marian White",
      "id": "dad675f9-321c-4d70-9298-fd5d1c24ead7",
      "memberSince": 2018-05-21T04:31:43.020Z,
      "username": "Tillman30",
    },
    "depth": {
      "depth": 60.4,
      "unit": "ft",
    },
    "description": "Beatae voluptate incidunt dolorem autem qui. Incidunt eaque aspernatur corrupti maiores ea quis dicta libero molestias.",
    "directions": "Repellendus enim ratione molestias excepturi natus enim tempora sint repellat.",
    "freeToDive": true,
    "gps": {
      "lat": -49.25,
      "lon": -135.28,
    },
    "id": "d723ed3f-edde-4dbe-b9fc-dfa846ac0cc2",
    "location": "San Jose Guernsey",
    "name": "runny patio",
    "shoreAccess": true,
    "updatedOn": 2023-01-20T08:20:22.960Z,
  },
  {
    "averageDifficulty": 1.54,
    "averageRating": 4.91,
    "createdOn": 2020-08-24T23:45:29.318Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/919.jpg",
      "displayName": "Louis Kozey",
      "id": "d7d0c010-c552-4264-80ae-61c5fd56c428",
      "memberSince": 2021-07-03T20:52:36.948Z,
      "username": "Vivianne43",
    },
    "depth": {
      "depth": 35.84,
      "unit": "m",
    },
    "description": "Porro voluptate exercitationem aperiam cumque eveniet iste adipisci non. Tempora ullam tempore eius nulla.",
    "directions": "Distinctio quas dolor facilis totam nam laboriosam architecto.",
    "freeToDive": true,
    "gps": {
      "lat": 21.8,
      "lon": -7.65,
    },
    "id": "4d879040-500e-4fd5-8400-e6f4c78e5b62",
    "location": "Rialto Marshall Islands",
    "name": "rundown handful",
    "shoreAccess": false,
    "updatedOn": 2021-06-13T03:32:10.180Z,
  },
  {
    "averageDifficulty": 4.35,
    "averageRating": 4.902,
    "createdOn": 2018-06-27T20:05:37.095Z,
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/518.jpg",
      "displayName": "Taylor Will",
      "id": "25793873-3413-4e78-aa6e-77717a7a23b8",
      "memberSince": 2020-09-25T22:21:02.836Z,
      "username": "Casimir_Reynolds11",
    },
    "depth": {
      "depth": 35.16,
      "unit": "m",
    },
    "description": "At perferendis repudiandae recusandae. Non totam ea molestias alias libero corporis quos repellendus culpa.",
    "directions": "Natus facilis nam iure in.",
    "freeToDive": true,
    "gps": {
      "lat": 66.65,
      "lon": 140.28,
    },
    "id": "6dbb141e-2cbd-4ac7-bdd9-ed54ff10623e",
    "location": "Cedar Park Denmark",
    "name": "each breath",
    "shoreAccess": true,
    "updatedOn": 2021-05-03T12:52:47.304Z,
  },
]
`;

exports[`Default Dive Site Manager Will create a new dive site with all options set 1`] = `
{
  "averageDifficulty": 0,
  "averageRating": 0,
  "createdOn": 2023-07-20T11:47:36.692Z,
  "creator": {
    "displayName": "Jacky Michaelson",
    "id": "379b88ad-d679-41ee-aa3e-af21deeb5568",
    "memberSince": undefined,
    "username": "Jacky47",
  },
  "depth": undefined,
  "description": "A sweet cavern dive near Playa del Carmen",
  "directions": "Take highway 307 West from Playa del Carmen til ya get there.",
  "freeToDive": false,
  "gps": {
    "lat": 20.513109539132362,
    "lon": -87.24704767409908,
  },
  "id": "51a4b91e-eef0-40d9-b353-1feb666f3c1f",
  "location": "Play del Carmen, Mexico",
  "name": "Chac Mool Cenote",
  "shoreAccess": true,
  "updatedOn": 2023-07-20T11:47:36.692Z,
}
`;

exports[`Default Dive Site Manager Will create a new dive stie with minimal options 1`] = `
{
  "averageDifficulty": 0,
  "averageRating": 0,
  "createdOn": 2023-07-20T11:47:36.692Z,
  "creator": {
    "displayName": "Jacky Michaelson",
    "id": "379b88ad-d679-41ee-aa3e-af21deeb5568",
    "memberSince": undefined,
    "username": "Jacky47",
  },
  "depth": undefined,
  "description": undefined,
  "directions": undefined,
  "freeToDive": undefined,
  "gps": undefined,
  "id": "51a4b91e-eef0-40d9-b353-1feb666f3c1f",
  "location": "Somewhere in the Bahamas",
  "name": "Smuggler's Plane",
  "shoreAccess": undefined,
  "updatedOn": 2023-07-20T11:47:36.692Z,
}
`;
